[package]
name = "qr-generator"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "qr_generator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri dependencies
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"

# Serialization for passing data between Rust and TypeScript
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Library to detect and interact with Serial Ports
serialport = "4.3.0"
tempfile = "3.27.0"

[profile.release]
panic = "abort" # Reduces binary size
codegen-units = 1 # Better optimization
lto = true # Link Time Optimization for a smaller single executable
